--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
 
     <!-- reCAPTCHA Reference -->
-    <script src="https://www.google.com/recaptcha/api.json?load=onloadCallback&render=explicit" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.json"></script>
         
     <title>Minnesota Valley Transport</title>
   </head>
