added the trustmark script, corrected a mispelling, and centered the gallery when in mobile mode

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="./favicon.ico">
+
+    <!--  Trusted Site Report Code  -->
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
        
     <!-- Favicon Data-->
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
