added the ssl cert code

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,6 +44,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
+    <!-- SSL Cert code -->
+    <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Pj1CLx7KuJS7boL6MMfjUntUgiriEvHw10OhJzT1hDhymy9UAk8vTRddRvXB"></script></span>
+
     <!--  Trusted Site Report Code  -->
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
        
