--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,7 +45,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
     <!-- SSL Cert code -->
-    <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Pj1CLx7KuJS7boL6MMfjUntUgiriEvHw10OhJzT1hDhymy9UAk8vTRddRvXB"></script></span>
+    <script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Pj1CLx7KuJS7boL6MMfjUntUgiriEvHw10OhJzT1hDhymy9UAk8vTRddRvXB"></script>
 
     <!--  Trusted Site Report Code  -->
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
