added meta data and trying to fix issue when going directly to a page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="We offer Refridgerted 'Reefer' Transportation to all points in the US and provide Warehousing and Truck and Trailer Repair and Wash in New Ulm, MN">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Transporting refrigerated goods from A to B for customers, worry free">
+    <meta property="og:description" content="We offer Refridgerted 'Reefer' Transportation to all points in the US and provide Warehousing and Truck and Trailer Repair and Wash in New Ulm, MN">
+    <meta property="og:url" content="http://www.mnvalleytransport.com/">
+    <meta property="og:site_name" content="Minnesota Valley Transport, Inc">
+    <meta property="og:image" content="http://www.mnvalleytransport.com/static/media/mvtShadowedLogo.96f6c7ad.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:description" content="We offer Refridgerted 'Reefer' Transportation to all points in the US and provide Warehousing and Truck and Trailer Repair and Wash in New Ulm, MN">
+    <meta name="twitter:title" content="Transporting refrigerated goods from A to B for customers, worry free">
+    <meta name="twitter:image" content="http://www.mnvalleytransport.com/static/media/mvtShadowedLogo.96f6c7ad.png">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
+
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
