fix for load issue

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:description" content="We offer Refrigerted 'Reefer' Transportation to all points in the US and provide Warehousing and Truck and Trailer Repair and Wash in New Ulm, MN">
     <meta name="twitter:title" content="Transporting refrigerated goods from A to B for customers, worry free">
     <meta name="twitter:image" content="http://www.mnvalleytransport.com/static/media/mvtShadowedLogo.96f6c7ad.png">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' http://www.mnvalleytransport.com; img-src * 'self' data:; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
+    <meta http-equiv="Content-Security-Policy" content="default-src *; img-src * 'self' data:; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
 
 
     <!--
