--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="Transporting refrigerated goods from A to B for customers, worry free">
     <meta name="twitter:image" content="http://www.mnvalleytransport.com/static/media/mvtShadowedLogo.96f6c7ad.png">
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self'; img-src * 'self' data:; style-src 'self' http://* 'unsafe-inline'; script-src 'self' 'unsafe-inline' http: 'unsafe-eval';" />
-
+    <base href="/">
 
     <!--
       manifest.json provides metadata used when your web app is added to the
